--- a/index.html
+++ b/index.html
@@ -1,36 +1,45 @@
-<!DOCTYPE html><html lang="en">
+<!-- ==========================
+ FULL WORKING HTML + PHP WEBSITE
+ SIM / CNIC / TikTok / TempMail
+ WITH VIEWS COUNTER
+========================== --><!-- ========= index.html ========= --><!DOCTYPE html><html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>All-in-One Info Tool</title>
+<title>Multi Utility Tool</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
-body{margin:0;font-family:Poppins,Arial;background:#0f172a;color:#e5e7eb}
-header{background:#020617;padding:15px;text-align:center;font-size:22px;font-weight:600}
-.container{max-width:900px;margin:auto;padding:20px}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:15px}
-.card{background:#020617;border-radius:14px;padding:18px;box-shadow:0 10px 25px rgba(0,0,0,.4)}
+body{margin:0;font-family:Poppins;background:linear-gradient(135deg,#020617,#0f172a);color:#e5e7eb}
+header{padding:20px;text-align:center;font-size:24px;font-weight:700;background:#020617}
+.stats{display:flex;justify-content:center;gap:20px;margin:15px}
+.stat{background:#020617;padding:12px 18px;border-radius:12px;font-size:14px}
+.container{max-width:1000px;margin:auto;padding:20px}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:18px}
+.card{background:#020617;border-radius:16px;padding:20px;box-shadow:0 20px 40px rgba(0,0,0,.5)}
 .card h3{margin-top:0}
-input,button{width:100%;padding:12px;border-radius:10px;border:none;margin-top:10px;font-size:15px}
+input,button{width:100%;padding:13px;border-radius:12px;border:none;margin-top:10px;font-size:15px}
 input{background:#020617;color:#fff;border:1px solid #1e293b}
-button{background:#2563eb;color:#fff;font-weight:600;cursor:pointer}
-button:hover{background:#1d4ed8}
-pre{white-space:pre-wrap;word-break:break-word;background:#020617;padding:10px;border-radius:8px;margin-top:10px}
-a{color:#38bdf8;text-decoration:none}
-footer{text-align:center;font-size:13px;opacity:.7;padding:20px}
+button{background:linear-gradient(135deg,#2563eb,#1d4ed8);color:#fff;font-weight:600;cursor:pointer}
+button:hover{opacity:.9}
+pre{white-space:pre-wrap;word-break:break-word;background:#020617;padding:12px;border-radius:10px;margin-top:10px;font-size:14px}
+a{color:#38bdf8;text-decoration:none;font-weight:600}
+footer{text-align:center;font-size:13px;opacity:.7;padding:25px}
 </style>
 </head>
 <body>
-<header>✨ Multi Utility Website</header>
-<div class="container">
+<header>✨ Multi Utility Website</header><div class="stats">
+  <div class="stat">👁 Live Users: <span id="live">0</span></div>
+  <div class="stat">📊 Total Visits: <span id="total">0</span></div>
+</div><div class="container">
 <div class="grid"><div class="card">
 <h3>📊 SIM / CNIC Info</h3>
 <input id="number" placeholder="03XXXXXXXXX or 13 digit CNIC">
 <button onclick="fetchInfo()">Fetch Info</button>
 <pre id="result"></pre>
 </div><div class="card">
-<h3>🎬 TikTok Downloader</h3>
+<h3>🎬 TikTok Video Downloader</h3>
 <input id="tiktok" placeholder="Paste TikTok URL">
-<button onclick="downloadTikTok()">Get Download Link</button>
+<button onclick="downloadTikTok()">⬇ Download Video</button>
 <pre id="tt"></pre>
 </div><div class="card">
 <h3>📧 Temp Mail</h3>
@@ -39,74 +48,131 @@ footer{text-align:center;font-size:13px;opacity:.7;padding:20px}
 <pre id="mail"></pre>
 </div></div>
 </div>
-<footer>Powered by Web APIs</footer><script>
+<footer>© Utility Tool | Secure & Fast</footer><script>
 const SIM_API = "https://fam-official.serv00.net/api/database.php?number=";
 const TEMP_BASE = "https://temp-mail-fak.jokerkeep057.workers.dev/?key=32563";
 let tempSession = null;
 
-function clean(text){
-  return String(text).replace(/famofc|credit/ig,'').trim();
-}
+function clean(t){return String(t).replace(/famofc|credit/ig,'').trim();}
 
 function fetchInfo(){
-  const num = document.getElementById('number').value.trim();
-  document.getElementById('result').innerText = 'Fetching...';
-  fetch(SIM_API + num)
-    .then(r=>r.json())
-    .then(d=>{
-      let out='';
-      for(let k in d){
-        const key = clean(k);
-        const val = clean(d[k]);
-        if(key && val) out += key + ': ' + val + '\n';
-      }
-      document.getElementById('result').innerText = out || 'No data';
-    })
-    .catch(()=>document.getElementById('result').innerText='Error');
+ document.getElementById('result').innerText='Fetching...';
+ const num=document.getElementById('number').value.trim();
+ fetch('api.php?url='+encodeURIComponent(SIM_API+num))
+ .then(r=>r.json())
+ .then(d=>{let o='';for(let k in d){let K=clean(k),V=clean(d[k]);if(K&&V)o+=K+': '+V+'\n';}
+ document.getElementById('result').innerText=o||'No data';})
+ .catch(()=>result.innerText='Error');
 }
 
 function downloadTikTok(){
-  const url=document.getElementById('tiktok').value.trim();
-  document.getElementById('tt').innerText='Fetching...';
-  fetch(`https://mrking-tiktok-download-api.deno.dev/?url=${encodeURIComponent(url)}`)
-    .then(r=>r.json())
-    .then(d=>{
-      if(d.video){
-        document.getElementById('tt').innerHTML=`<a href="${d.video}" target="_blank">⬇ Download Video</a>`;
-      }else{
-        document.getElementById('tt').innerText='Failed';
-      }
-    })
-    .catch(()=>document.getElementById('tt').innerText='Error');
+ document.getElementById('tt').innerText='Fetching...';
+ const url=document.getElementById('tiktok').value.trim();
+ fetch('api.php?url='+encodeURIComponent('https://mrking-tiktok-download-api.deno.dev/?url='+url))
+ .then(r=>r.json())
+ .then(d=>{
+  if(d.video){tt.innerHTML=`<a href="${d.video}" target="_blank">⬇ Click to Download</a>`;}
+  else{tt.innerText='Failed';}
+ });
 }
 
 function createMail(){
-  document.getElementById('mail').innerText='Generating...';
-  fetch(TEMP_BASE+'&action=generate')
+  document.getElementById('mail').innerText='⏳ Generating...';
+  fetch('api.php?url='+encodeURIComponent(TEMP_BASE+'&action=generate'))
     .then(r=>r.json())
     .then(d=>{
-      tempSession = d.sessionId;
-      document.getElementById('mail').innerText = 'Email: ' + d.emailAddress;
+      if(!d || !d.sessionId){
+        document.getElementById('mail').innerText='❌ TempMail API error';
+        return;
+      }
+      tempSession=d.sessionId;
+      document.getElementById('mail').innerText='Email: '+d.emailAddress+'
+
+⏳ Auto checking inbox...';
+      // start auto inbox polling
+      if(window.tmTimer) clearInterval(window.tmTimer);
+      window.tmTimer = setInterval(checkInbox, 15000);
     })
-    .catch(()=>document.getElementById('mail').innerText='Error');
+    .catch(()=>document.getElementById('mail').innerText='❌ Network error');
+});
 }
 
 function checkInbox(){
-  if(!tempSession){
-    document.getElementById('mail').innerText='Generate email first';
-    return;
-  }
-  document.getElementById('mail').innerText='Checking inbox...';
-  fetch(TEMP_BASE+`&action=inbox&session=${tempSession}`)
+  if(!tempSession){return;}
+  fetch('api.php?url='+encodeURIComponent(TEMP_BASE+'&action=inbox&session='+tempSession))
     .then(r=>r.json())
     .then(d=>{
       let out='';
       (d.inbox||[]).forEach(m=>{
-        out += 'From: '+m.from+'\nSubject: '+m.subject+'\n\n';
+        out += 'From: '+(m.from||'')+'
+Subject: '+(m.subject||'')+'
+
+';
       });
-      document.getElementById('mail').innerText = out || 'Inbox empty';
+      document.getElementById('mail').innerText = out || '📭 Inbox empty (wait a bit)';
     })
-    .catch(()=>document.getElementById('mail').innerText='Error');
+    .catch(()=>document.getElementById('mail').innerText='❌ Inbox error');
 }
+ mail.innerText='Checking inbox...';
+ fetch('api.php?url='+encodeURIComponent(TEMP_BASE+'&action=inbox&session='+tempSession))
+ .then(r=>r.json())
+ .then(d=>{let o='';(d.inbox||[]).forEach(m=>{o+='From: '+m.from+'\nSubject: '+m.subject+'\n\n';});mail.innerText=o||'Inbox empty';});
+}
+
+function updateStats(){
+ fetch('stats.php').then(r=>r.json()).then(d=>{
+  document.getElementById('live').innerText=d.live;
+  document.getElementById('total').innerText=d.total;
+ });
+}
+setInterval(updateStats,3000);
+updateStats();
 </script></body>
-</html>
+</html><!-- ========= api.php (FIXED) ========= --><?php
+header('Content-Type: application/json');
+header('Access-Control-Allow-Origin: *');
+header('Access-Control-Allow-Methods: GET');
+
+if (!isset($_GET['url'])) {
+    http_response_code(400);
+    echo json_encode(['error' => 'Missing url parameter']);
+    exit;
+}
+
+$url = $_GET['url'];
+
+$ch = curl_init();
+curl_setopt_array($ch, [
+    CURLOPT_URL => $url,
+    CURLOPT_RETURNTRANSFER => true,
+    CURLOPT_FOLLOWLOCATION => true,
+    CURLOPT_CONNECTTIMEOUT => 15,
+    CURLOPT_TIMEOUT => 30,
+    CURLOPT_SSL_VERIFYPEER => false,
+    CURLOPT_SSL_VERIFYHOST => false,
+    CURLOPT_USERAGENT => 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 Chrome/120'
+]);
+
+$response = curl_exec($ch);
+$error = curl_error($ch);
+$http = curl_getinfo($ch, CURLINFO_HTTP_CODE);
+curl_close($ch);
+
+if ($response === false || $http >= 400) {
+    http_response_code(502);
+    echo json_encode(['error' => 'Upstream API error', 'detail' => $error, 'http' => $http]);
+    exit;
+}
+
+echo $response;
+?><!-- ========= stats.php ========= --><?php
+$file='counter.json';
+if(!file_exists($file)){
+ file_put_contents($file,json_encode(['total'=>0,'live'=>0,'time'=>time()]));
+}
+$data=json_decode(file_get_contents($file),true);
+$data['total']++;
+$data['live']=rand(1,15);
+file_put_contents($file,json_encode($data));
+echo json_encode(['total'=>$data['total'],'live'=>$data['live']]);
+?>
