--- a/index.html
+++ b/index.html
@@ -1,178 +1,213 @@
-<!-- ==========================
- FULL WORKING HTML + PHP WEBSITE
- SIM / CNIC / TikTok / TempMail
- WITH VIEWS COUNTER
-========================== --><!-- ========= index.html ========= --><!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Multi Utility Tool</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>SIM Database By E3 HACKER</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
 <style>
-body{margin:0;font-family:Poppins;background:linear-gradient(135deg,#020617,#0f172a);color:#e5e7eb}
-header{padding:20px;text-align:center;font-size:24px;font-weight:700;background:#020617}
-.stats{display:flex;justify-content:center;gap:20px;margin:15px}
-.stat{background:#020617;padding:12px 18px;border-radius:12px;font-size:14px}
-.container{max-width:1000px;margin:auto;padding:20px}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:18px}
-.card{background:#020617;border-radius:16px;padding:20px;box-shadow:0 20px 40px rgba(0,0,0,.5)}
-.card h3{margin-top:0}
-input,button{width:100%;padding:13px;border-radius:12px;border:none;margin-top:10px;font-size:15px}
-input{background:#020617;color:#fff;border:1px solid #1e293b}
-button{background:linear-gradient(135deg,#2563eb,#1d4ed8);color:#fff;font-weight:600;cursor:pointer}
-button:hover{opacity:.9}
-pre{white-space:pre-wrap;word-break:break-word;background:#020617;padding:12px;border-radius:10px;margin-top:10px;font-size:14px}
-a{color:#38bdf8;text-decoration:none;font-weight:600}
-footer{text-align:center;font-size:13px;opacity:.7;padding:25px}
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family:'Poppins',sans-serif;
+}
+
+body{
+    min-height:100vh;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
+    color:#fff;
+}
+
+/* 3D Glass Card */
+.card{
+    width:100%;
+    max-width:420px;
+    padding:30px;
+    border-radius:22px;
+    background:rgba(255,255,255,0.12);
+    backdrop-filter:blur(15px);
+    box-shadow:
+        0 25px 45px rgba(0,0,0,0.45),
+        inset 0 1px 1px rgba(255,255,255,0.25);
+    transition:0.4s;
+}
+
+.card:hover{
+    transform:translateY(-6px) rotateX(3deg);
+}
+
+h1{
+    text-align:center;
+    font-size:24px;
+    margin-bottom:15px;
+    font-weight:600;
+}
+
+/* Views */
+.views{
+    display:flex;
+    justify-content:space-between;
+    margin-bottom:15px;
+}
+
+.viewBox{
+    background:rgba(0,0,0,0.35);
+    padding:8px 12px;
+    border-radius:10px;
+    font-size:13px;
+}
+
+/* Input */
+input{
+    width:100%;
+    padding:14px;
+    border-radius:12px;
+    border:none;
+    outline:none;
+    font-size:15px;
+    margin-bottom:15px;
+}
+
+/* Button */
+button{
+    width:100%;
+    padding:14px;
+    border:none;
+    border-radius:12px;
+    font-size:16px;
+    font-weight:600;
+    color:#fff;
+    cursor:pointer;
+    background:linear-gradient(135deg,#ff512f,#dd2476);
+    box-shadow:0 10px 22px rgba(0,0,0,0.3);
+    transition:0.3s;
+}
+
+button:hover{
+    transform:scale(1.05);
+}
+
+/* Result */
+.result{
+    margin-top:20px;
+    background:rgba(0,0,0,0.35);
+    padding:15px;
+    border-radius:12px;
+    max-height:300px;
+    overflow:auto;
+    font-size:14px;
+}
+
+.result p{
+    margin:6px 0;
+}
+
+.error{
+    color:#ffb3b3;
+    text-align:center;
+}
+
+.loading{
+    text-align:center;
+    opacity:0.8;
+}
+
+/* Scrollbar */
+.result::-webkit-scrollbar{
+    width:6px;
+}
+.result::-webkit-scrollbar-thumb{
+    background:#ff4b2b;
+    border-radius:10px;
+}
 </style>
 </head>
+
 <body>
-<header>✨ Multi Utility Website</header><div class="stats">
-  <div class="stat">👁 Live Users: <span id="live">0</span></div>
-  <div class="stat">📊 Total Visits: <span id="total">0</span></div>
-</div><div class="container">
-<div class="grid"><div class="card">
-<h3>📊 SIM / CNIC Info</h3>
-<input id="number" placeholder="03XXXXXXXXX or 13 digit CNIC">
-<button onclick="fetchInfo()">Fetch Info</button>
-<pre id="result"></pre>
-</div><div class="card">
-<h3>🎬 TikTok Video Downloader</h3>
-<input id="tiktok" placeholder="Paste TikTok URL">
-<button onclick="downloadTikTok()">⬇ Download Video</button>
-<pre id="tt"></pre>
-</div><div class="card">
-<h3>📧 Temp Mail</h3>
-<button onclick="createMail()">Generate New Email</button>
-<button onclick="checkInbox()">Check Inbox</button>
-<pre id="mail"></pre>
-</div></div>
+
+<div class="card">
+    <h1>📱 SIM Database Lookup</h1>
+
+    <!-- Views -->
+    <div class="views">
+        <div class="viewBox">👁 Live: <span id="liveViews">--</span></div>
+        <div class="viewBox">📊 Total: <span id="totalViews">--</span></div>
+    </div>
+
+    <input type="text" id="number" placeholder="Enter Phone Number">
+    <button onclick="getSIMData()">Search</button>
+
+    <div id="output" class="result"></div>
 </div>
-<footer>© Utility Tool | Secure & Fast</footer><script>
-const SIM_API = "https://fam-official.serv00.net/api/database.php?number=";
-const TEMP_BASE = "https://temp-mail-fak.jokerkeep057.workers.dev/?key=32563";
-let tempSession = null;
 
-function clean(t){return String(t).replace(/famofc|credit/ig,'').trim();}
+<script>
+/* =========================
+   TOTAL VIEWS (REAL COUNTER)
+   ========================= */
+const NAMESPACE = "sim-database-app";
+const KEY = "visits";
 
-function fetchInfo(){
- document.getElementById('result').innerText='Fetching...';
- const num=document.getElementById('number').value.trim();
- fetch('api.php?url='+encodeURIComponent(SIM_API+num))
- .then(r=>r.json())
- .then(d=>{let o='';for(let k in d){let K=clean(k),V=clean(d[k]);if(K&&V)o+=K+': '+V+'\n';}
- document.getElementById('result').innerText=o||'No data';})
- .catch(()=>result.innerText='Error');
-}
-
-function downloadTikTok(){
- document.getElementById('tt').innerText='Fetching...';
- const url=document.getElementById('tiktok').value.trim();
- fetch('api.php?url='+encodeURIComponent('https://mrking-tiktok-download-api.deno.dev/?url='+url))
- .then(r=>r.json())
- .then(d=>{
-  if(d.video){tt.innerHTML=`<a href="${d.video}" target="_blank">⬇ Click to Download</a>`;}
-  else{tt.innerText='Failed';}
- });
-}
-
-function createMail(){
-  document.getElementById('mail').innerText='⏳ Generating...';
-  fetch('api.php?url='+encodeURIComponent(TEMP_BASE+'&action=generate'))
-    .then(r=>r.json())
-    .then(d=>{
-      if(!d || !d.sessionId){
-        document.getElementById('mail').innerText='❌ TempMail API error';
-        return;
-      }
-      tempSession=d.sessionId;
-      document.getElementById('mail').innerText='Email: '+d.emailAddress+'
-
-⏳ Auto checking inbox...';
-      // start auto inbox polling
-      if(window.tmTimer) clearInterval(window.tmTimer);
-      window.tmTimer = setInterval(checkInbox, 15000);
-    })
-    .catch(()=>document.getElementById('mail').innerText='❌ Network error');
+fetch(`https://api.countapi.xyz/hit/${NAMESPACE}/${KEY}`)
+.then(res => res.json())
+.then(data => {
+    document.getElementById("totalViews").innerText = data.value;
 });
+
+/* =========================
+   LIVE VIEWS (DYNAMIC)
+   ========================= */
+function updateLiveViews(){
+    let live = Math.floor(Math.random() * 5) + 1;
+    document.getElementById("liveViews").innerText = live;
 }
+updateLiveViews();
+setInterval(updateLiveViews, 5000);
 
-function checkInbox(){
-  if(!tempSession){return;}
-  fetch('api.php?url='+encodeURIComponent(TEMP_BASE+'&action=inbox&session='+tempSession))
-    .then(r=>r.json())
-    .then(d=>{
-      let out='';
-      (d.inbox||[]).forEach(m=>{
-        out += 'From: '+(m.from||'')+'
-Subject: '+(m.subject||'')+'
+/* =========================
+   SIM DATABASE API
+   ========================= */
+async function getSIMData(){
+    const number = document.getElementById("number").value.trim();
+    const output = document.getElementById("output");
 
-';
-      });
-      document.getElementById('mail').innerText = out || '📭 Inbox empty (wait a bit)';
-    })
-    .catch(()=>document.getElementById('mail').innerText='❌ Inbox error');
+    if(number === ""){
+        output.innerHTML = "<p class='error'>Please enter a number.</p>";
+        return;
+    }
+
+    output.innerHTML = "<p class='loading'>🔍 Fetching data...</p>";
+
+    try{
+        const res = await fetch(
+            "https://fam-official.serv00.net/api/database.php?number=" + encodeURIComponent(number)
+        );
+
+        const data = await res.json();
+
+        if(!data || Object.keys(data).length === 0){
+            output.innerHTML = "<p class='error'>No data found.</p>";
+            return;
+        }
+
+        let html = "";
+        for(const key in data){
+            html += `<p><strong>${key}:</strong> ${data[key]}</p>`;
+        }
+
+        output.innerHTML = html;
+
+    }catch(e){
+        output.innerHTML = "<p class='error'>API Error or Network Issue</p>";
+    }
 }
- mail.innerText='Checking inbox...';
- fetch('api.php?url='+encodeURIComponent(TEMP_BASE+'&action=inbox&session='+tempSession))
- .then(r=>r.json())
- .then(d=>{let o='';(d.inbox||[]).forEach(m=>{o+='From: '+m.from+'\nSubject: '+m.subject+'\n\n';});mail.innerText=o||'Inbox empty';});
-}
+</script>
 
-function updateStats(){
- fetch('stats.php').then(r=>r.json()).then(d=>{
-  document.getElementById('live').innerText=d.live;
-  document.getElementById('total').innerText=d.total;
- });
-}
-setInterval(updateStats,3000);
-updateStats();
-</script></body>
-</html><!-- ========= api.php (FIXED) ========= --><?php
-header('Content-Type: application/json');
-header('Access-Control-Allow-Origin: *');
-header('Access-Control-Allow-Methods: GET');
-
-if (!isset($_GET['url'])) {
-    http_response_code(400);
-    echo json_encode(['error' => 'Missing url parameter']);
-    exit;
-}
-
-$url = $_GET['url'];
-
-$ch = curl_init();
-curl_setopt_array($ch, [
-    CURLOPT_URL => $url,
-    CURLOPT_RETURNTRANSFER => true,
-    CURLOPT_FOLLOWLOCATION => true,
-    CURLOPT_CONNECTTIMEOUT => 15,
-    CURLOPT_TIMEOUT => 30,
-    CURLOPT_SSL_VERIFYPEER => false,
-    CURLOPT_SSL_VERIFYHOST => false,
-    CURLOPT_USERAGENT => 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 Chrome/120'
-]);
-
-$response = curl_exec($ch);
-$error = curl_error($ch);
-$http = curl_getinfo($ch, CURLINFO_HTTP_CODE);
-curl_close($ch);
-
-if ($response === false || $http >= 400) {
-    http_response_code(502);
-    echo json_encode(['error' => 'Upstream API error', 'detail' => $error, 'http' => $http]);
-    exit;
-}
-
-echo $response;
-?><!-- ========= stats.php ========= --><?php
-$file='counter.json';
-if(!file_exists($file)){
- file_put_contents($file,json_encode(['total'=>0,'live'=>0,'time'=>time()]));
-}
-$data=json_decode(file_get_contents($file),true);
-$data['total']++;
-$data['live']=rand(1,15);
-file_put_contents($file,json_encode($data));
-echo json_encode(['total'=>$data['total'],'live'=>$data['live']]);
-?>
+</body>
+</html>
